{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 4,
  "lineage": "1f51d497-548c-d755-71c0-19eac7f358fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group/sg-040eff7f854a4e5cf",
            "description": "Allow SSH and HTTP traffic",
            "egress": [],
            "id": "sg-040eff7f854a4e5cf",
            "ingress": [],
            "name": "terraform-firewall",
            "name_prefix": "",
            "owner_id": "183295411943",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Learning Terraform",
              "Name": "terraform-firewall"
            },
            "tags_all": {
              "Environment": "Learning Terraform",
              "Name": "terraform-firewall"
            },
            "timeouts": null,
            "vpc_id": "vpc-04658d0b7493013f0"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-074d7b47503df16ea",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-074d7b47503df16ea",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-040eff7f854a4e5cf",
            "security_group_rule_id": "sgr-074d7b47503df16ea",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_terraform_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:183295411943:security-group-rule/sgr-043440b1ae129c9ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-043440b1ae129c9ae",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-040eff7f854a4e5cf",
            "security_group_rule_id": "sgr-043440b1ae129c9ae",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.terraform-firewall"
          ]
        }
      ]
    }
  ]
}